k8s/konto-service/konto-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konto-service
  labels:
    app: konto-service
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: konto-service
  template:
    metadata:
      labels:
        app: konto-service
    spec:
      containers:
        - name: konto-service
          image: image-registry.openshift-image-registry.svc:5000/cvirat-dev-dev/konto-service:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: h2-data
              mountPath: /app/data
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 15
          resources:
            requests: { cpu: '100m', memory: '256Mi' }
            limits:   { cpu: '500m', memory: '512Mi' }
      volumes:
        - name: h2-data
          persistentVolumeClaim:
            claimName: konto-service-data
