k8s/konto-service/konto-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: konto-service
spec:
  selector:
    app: konto-service
  ports:
    - port: 8081
      targetPort: 8081
