k8s/konto-service/konto-service-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: konto-service
spec:
  to:
    kind: Service
    name: konto-service
  port:
    targetPort: 8081
  tls:
    termination: edge
